@@ -1,7 +1,7 @@
 # $FreeBSD$
 
 PORTNAME=		OpenStopMotion
-PORTVERSION=		0.6.4
+PORTVERSION=		0.6.6
 CATEGORIES=		multimedia
 MASTER_SITES=		${MASTER_SITE_SOURCEFORGE}
 MASTER_SITE_SUBDIR=	openstopmotion
