@@ -1,2 +1,2 @@
-SHA256 (OpenStopMotion-0.6.4-src.tar.bz2) = 75286002f20669f51f58c47ec374ecc2e543d30509b2662143157629ba9fafba
-SIZE (OpenStopMotion-0.6.4-src.tar.bz2) = 3478622
+SHA256 (OpenStopMotion-0.6.6-src.tar.bz2) = e4e1f5584da3bdf2bbfcd3010f84ce8ee8ca512e8ff22fe07d1f8fa95905fcbf
+SIZE (OpenStopMotion-0.6.6-src.tar.bz2) = 5131649
