@@ -4,7 +4,8 @@ OpenStopMotion Changelog
 0.6.5
   - Fixed ioctl sign-extension warnings
   - Fixed some compiler warnings about unused variables
-  - FreeBSD-Port: fixed tabwidth in Makefile from 4 to 8 and some other issues
+  - FreeBSD-Port: fixed tabwidth and some other issues, updated to new
+    policies
 
 0.6.4 2013-04-18
   - added missing header include in arduino.cpp, fixed compiler error on
